Fix spacing issues

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -30,7 +30,7 @@ html {
 
 .tech {
   width: 100vw;
-  height: 55vh;
+  height: 65vh;
   padding: 30px;
 }
 
